# ass-easy-loop

./: .gitignore  ARCH_LINUX_SETUP.md  BATTERY_LOGGING_IMPLEMENTATION.md  BATTERY_VALIDATION_STRATEGY.md  CLAUDE.md  CURRENT_NO_STD_TEST_STATUS.md  Cargo.toml  DEVELOPMENT_ENVIRONMENT_SUMMARY.md  DEVELOPMENT_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md  Embed.toml  Enhanced Test Suite_20250802_103534.csv  Enhanced Test Suite_20250802_103534.html  HARDWARE_VALIDATION_IMPLEMENTATION.md  HIDLOG_USAGE.md  IMPLEMENTATION_CHECKLIST.md  PANIC_HANDLER_IMPLEMENTATION.md  PRD.md  README.md  TASK_17_IMPLEMENTATION_SUMMARY.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_TROUBLESHOOTING_GUIDE.md  Test Suite_20250802_103620.csv  Test Suite_20250802_103620.html  Test Suite_20250802_103643.csv  Test Suite_20250802_103643.html  USB_COMMUNICATION_VALIDATION_IMPLEMENTATION.md  USB_HID_INTEGRATION_TESTS.md  USER-DOCS.md  VALIDATION_CHECKLIST.md  WIRING_GUIDE.md  autonomous_flash_test.py  bootloader_debugging_summary.md  bootloader_diagnostic.py  bootloader_entry_fix.patch  bootloader_fix.rs  bootloader_tests_conversion_summary.md  build.rs  comprehensive_test_execution_summary.md  debug_bootloader_flashing.py  (+43 more)
.cargo/: config.toml
.claude/: PROJECT_DEVELOPMENT_RULES.md  USB_ENUMERATION_CHEAT_SHEET.md
PRPs/: 001-platformio-configuration.md  002-coil-driver-hal.md  003-battery-monitoring-rtic-integration.md  README.md  automatic-bootloader-entry.md  battery-charging-circuit.md  comprehensive-unit-testing.md  overengineered-automatic-bootloader-entry.md  rust-rp2040-base-project.md  usb-device-enumeration-fix.md  usb-hid-logging.md  waveform-generator.md
PRPs/PRDs/: battery-charging-circuit.md  device-requirements.md  usb-hid-logging.md  waveform-generator.md
artifacts/: baseline_state_documentation.md
docs/: BOOTLOADER_FLASHING_GUIDE.md  NO_STD_MOCK_COMPONENTS.md  NO_STD_TESTING_README.md  NO_STD_TESTING_VALIDATION_REPORT.md  NO_STD_TEST_FRAMEWORK.md  NO_STD_TEST_INTEGRATION_GUIDE.md  NO_STD_TEST_PATTERNS.md  NO_STD_TEST_TROUBLESHOOTING.md  TEST_RESULT_COMMUNICATION.md  calculator.html  current-calculator.html  tp4056_battery_integration.md
examples/: test_framework_demo.rs
host_tools/: battery_monitor.py  bootloader_entry.py  device_control.py  log_monitor.py  package.json  test_bootloader_entry.py  test_logging.py  test_runner.py  tsconfig.json  usb_enumerate.py  verify_logging_system.py
src/: battery.rs  bootloader.rs  command.rs  comprehensive_test_execution.rs  comprehensive_test_integration.rs  comprehensive_test_validation.rs  config.rs  error_handling.rs  lib.rs  logging.rs  main.cpp  main.rs  performance_profiler.rs  resource_management.rs  system_state.rs  test_execution_handler.rs  test_framework.rs  test_framework_validation.rs  test_mocks.rs  test_performance_optimizer.rs  test_processor.rs  test_result_serializer.rs  test_suite_registry.rs  types.rs
test_framework/: CI_CD_INTEGRATION_GUIDE.md  COMPREHENSIVE_TESTING_README.md  ENHANCED_REPORTING_IMPLEMENTATION.md  FIRMWARE_FLASHING_README.md  NOSTD_TEST_INTEGRATION.md  README.md  __init__.py  ci_config_example.json  ci_integration.py  ci_integration_demo.py  ci_integration_example.py  command_handler.py  comprehensive_test_example.py  comprehensive_test_execution_cli.py  comprehensive_test_runner.py  config_loader.py  device_manager.py  enhanced_monitoring_demo.py  example_usage.py  firmware_flash_example.py  firmware_flasher.py  monitored_test_runner.py  nostd_test_example.py  nostd_test_integration.py  real_time_monitor.py  report_generator.py  requirements.txt  result_collector.py  run_tests.py  scenario_config.json  test_ci_integration_basic.py  test_ci_integration_comprehensive.py  test_nostd_integration.py  test_scenarios.py  test_sequencer.py
tests/: battery_adc_integration_test.rs  battery_adc_unit_test.rs  battery_adc_validation_integration_test.rs  battery_automation_tests.rs  battery_hardware_validation.rs  battery_logging_integration_test.rs  battery_performance_validation.rs  battery_safety_validation.rs  bootloader_tests.rs  command_queue_tests.rs  command_task_coordination_test.rs  comprehensive_system_validation_test.rs  comprehensive_system_validation_test.rs.disabled  comprehensive_test_execution_integration_test.rs  comprehensive_test_execution_integration_test.rs.disabled  config_integration_test.rs  core_functionality_unit_tests.rs  final_integration_test_suite.rs  final_integration_test_suite.rs.disabled  hardware_tests.rs  hardware_validation_tests.rs  integration_tests.rs  intentional_panic_test.rs  led_functionality_integration_test.rs  led_functionality_integration_test.rs.disabled  lib.rs  logging_macro_tests.rs  logging_tests.rs  long_term_stability_tests.rs  mock_components_example_test.rs  mock_components_example_test.rs.disabled  panic_logging_test.rs  panic_logging_test.rs.disabled  pemf_logging_integration_test.rs  pemf_timing_tolerance_validation_test.rs  pemf_timing_tolerance_validation_test.rs.disabled  pemf_timing_validation_integration_test.rs  pemf_timing_validation_test.rs  performance_monitoring_test.rs  performance_profiling_tests.rs  (+20 more)
validation_scripts/: hardware_validation.py  run_setup_validation.sh  setup_validation.py
(+155 files in other folders)
